# octave-dicom

./: DESCRIPTION  Makefile  NEWS
src/: configure.ac  dicomread.cpp
